fixed navigation z-index

--- a/docroot/_diffs/css/custom_isny.css
+++ b/docroot/_diffs/css/custom_isny.css
@@ -206,7 +206,7 @@ h1[class="site-title"]{
     font-size: 1em;
     margin-bottom: 15px;
     position: relative;
-    z-index: 1;
+    z-index: 1400;
 }  
 
 .aui #navigation .navbar-inner{
